# hpatches_benchmark_tool

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
hpatches_benchmark/benchmark/: benchmark.py  benchmark_result.py  evaluation_step.py  homography_metrics.py  repeatability_metrics.py
hpatches_benchmark/dataset/: __init__.py  hpatches.py  image_with_homography.py
hpatches_benchmark/utils/: logger.py
src/hpatches_benchmark/: __main__.py  hpatches_benchmark.py
src/hpatches_benchmark/benchmark/: benchmark.py  benchmark_result.py  features.py  homography_estimate.py  homography_evaluation.py  matches.py  repeatability_evaluation.py  tabular.py  visualisation.py
src/hpatches_benchmark/dataset/: hpatches.py  image_set.py  image_with_homography.py
src/hpatches_benchmark/detectors/: detector.py  orb.py  sift.py  silk.py
src/hpatches_benchmark/detectors/r2d2/: README.md  __init__.py  r2d2.py
src/hpatches_benchmark/detectors/superpoint/: LICENSE  README.md  __init__.py  superpoint.py  superpoint_detector.py  utils.py  vgg_block.py
src/hpatches_benchmark/utils/: utils.py
test/: test_dataset.py
