[project]
name = "hpatches_benchmark_tool"
version = "1.0.0"
description = "A tool for evaluating feature extraction + description algorithms."
authors = [{ name = "Joseph Agrane", email = "josephagrane@gmail.com" }]
requires-python = ">=3.10"

dependencies = [
    "numpy~=2.2.6",
    "opencv-python~=4.12.0.88",
    "tqdm~=4.67.1",
    "matplotlib~=3.10.7",
    "tabulate~=0.9.0"
]
