[project]
name = "hpatches-benchmark-tool"
version = "0.1.0"
description = "A tool for evaluating feature extraction + description algorithms."
authors = [{ name = "Joseph Agrane", email = "josephagrane@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib~=3.10.7",
    "numpy~=2.2.6",
    "opencv-python~=4.12.0.88",
    "tabulate~=0.9.0",
    "tqdm~=4.67.1",
]
