[project]
name = "hpatches-benchmark-tool"
version = "0.1.0"
description = "A tool for evaluating feature extraction + description algorithms."
authors = [{ name = "Joseph Agrane", email = "josephagrane@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib~=3.10.7",
    "ndshapecheck>=0.2.3",
    "numpy~=2.2.6",
    "opencv-python~=4.12.0.88",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "tabulate>=0.9.0",
    "torch>=2.8.0",
    "tqdm~=4.67.1",
]

[project.scripts]
hpatches-benchmark = "hpatches_benchmark.hpatches_benchmark:main"

[tool.setuptools.package-data]
hpatches_benchmark = ["detectors/superpoint/superpooint_v6_from_tf.pth"]
